# animal_log

./: pyproject.toml
animal_logger/: login_page.py
animal_logger/src/: login_page.py  main.py
animal_logger/src/animals/: base_animal.py  mammal.py
animal_logger/src/db/: connection.py  utils_db.py
animal_logger/src/frames/: add_animal.py  baseframe.py  dashboard.py  login_page.py
animal_logger/src/windows/: login_page.py
config/: app_config.yaml  config.py  db_config.yaml
config/log_config/: log_config.py
