[tool.poetry]
name = "animal-logger"
version = "0.1.0"
description = ""
authors = ["Ricardo Sans <ricardosans98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
