[tool.poetry]
name = "animal-logger"
version = "0.1.0"
description = ""
authors = ["Ricardo Sans <ricardosans98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"
tk = "^0.1.0"
pillow = "^10.2.0"
sqlalchemy = "^2.0.28"
pyyaml = "^6.0.1"
dask = {extras = ["dataframe"], version = "^2024.3.1"}
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
